--- a/index.html
+++ b/index.html
@@ -43,6 +43,6 @@
             Step13:Fold the back of the leg inside and repeat on the other side.<br> <br>
             Step14:Draw the eyes and your camel is finished.
         </p>
-        <a href = "#"><img src="images/camel.png"/></a>
+        <a href = "#"><img src="camel.png"/></a>
     </body>
 </html>
